# 2017WS_TeamOr8Bit

./: .astylerc  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  bootstrap.sh
TeamOr8Bit_unity/Assets/: Scene.unity
TeamOr8Bit_unity/Assets/Scripts/: HexCell.cs  HexCoordinates.cs  HexGrid.cs
TeamOr8Bit_unity/ProjectSettings/: ProjectSettings.asset
assets/fonts/: DejaVuSans.ttf.bkf
assets/models/: aheli.objv3  btank.objv3  cube.objv1  gtrans.objv3  hextile.objv2  infantry.objv3  map.objv3  tank.objv3  theli.mtl  theli.objv3
assets/shaders/: objv1.fsh  objv1.vsh  objv2.fsh  objv2.vsh  objv3.fsh  objv3.vsh  s2d.fsh  s2d.vsh  s2dc.fsh  s2dc.vsh  terrain.fsh  terrain_tileno.fsh  texts.fsh  texts.vsh
docs/: engine-text.org  gdd.tex  lua.org  plan.org  todo.org
docs/gdd/: gdd.tex
docs/gdd/chapters/: ai.tex  art.tex  assets.tex  gameplay.tex  interface.tex  levels.tex  management.tex  overview.tex  secondary.tex  technical.tex
src/: Tuprules.tup  config.h.in  logger.cpp  logger.h
src/engine/: CMakeLists.txt  LICENSE  buffer.hpp  cache.cpp  cache.hpp  camera.hpp  camerabounds.hpp  constants.hpp  context.hpp  framebuffer.hpp  framebuffer_ortho.hpp  glyphmap.cpp  glyphmap.hpp  loader.c  loader.hpp  mesh.cpp  mesh.hpp  paths.hpp  programs.cpp  programs.hpp  qe.hpp  renderbuffer.hpp  screenshot.cpp  screenshot.hpp  soundengine.hpp  text.hpp  textures.hpp
src/font/: font.cpp  font.hpp  font_linux.cpp  font_linux.hpp  font_win.cpp  font_win.hpp
src/game/: Tupfile  board.cpp  board.hpp  framebuffer_first_pass.hpp  gameboard.hpp  main.cpp  match.cpp  match.hpp  move.hpp  player.hpp  scripting.cpp  scripting.hpp  terrain.hpp  uirender.cpp  uirender.hpp  unit.cpp  unit.hpp  unitAttack.hpp  unitMove.hpp  unitattack.hpp  unitcmove.hpp  unitmanager.cpp  unitmanager.hpp  unitmove.hpp
src/game/context/: coordinatemenu.cpp  coordinatemenu.hpp
src/game/screens/: about.hpp  ending.cpp  ending.hpp  game.hpp  game_impl.cpp  game_impl.hpp  gameinput.cpp  gameinput.hpp  main.hpp  screen.hpp  screens.hpp
src/hextile/: hextile.hpp
src/savegame/: CMakeLists.txt  LICENSE  Tupfile  savegame.cpp  savegame.hpp
src/screenmanager/: screen.hpp
src/ui/: CMakeLists.txt  LICENSE  abstract_common.hpp  abstractbox.cpp  abstractbox.hpp  abstracttext.cpp  abstracttext.hpp  abstractui.hpp  box.cpp  box.hpp  common.hpp  contextui.hpp  defined_common.hpp  definedbox.cpp  definedbox.hpp  definedtext.hpp  definedui.cpp  definedui.hpp  text.hpp  ui.hpp  uifactory.cpp  uifactory.hpp
static/: loader.lua
static/units/: default_unit.lua  tank.lua
